# mokapot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  NOTES.md  README.md  codebase_structure.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: mutants.yml  rust.yml
benches/: percolate_real.rs  percolate_simple.rs  queries.rs  simple.rs
examples/: simple.rs  threads.rs
src/: geotools.rs  itertools.rs  lib.rs  main.rs  models.rs  prelude.rs  testing.rs
src/models/: cnf.rs  document.rs  documents.rs  index.rs  iterators.rs  percolator.rs  percolator_core.rs  queries.rs  types.rs
src/models/cnf/: literal.rs  parsing.rs
src/models/percolator/: clause_matcher.rs  test_extensive.rs  tools.rs
src/models/percolator_core/: test_extensive.rs  tools.rs
src/models/queries/: common.rs  conjunction.rs  disjunction.rs  h3_inside.rs  latlng_within.rs  ordered.rs  prefix.rs  query.rs  term.rs  termdisjunction.rs
tests/: clause_match_tests.rs  document_test.rs  index_filter.rs  index_tests.rs  percolator_extensive.rs  percolator_property.proptest-regressions  percolator_property.rs  percolator_test.rs  prelude_test.rs  public_test.rs  queries_filter_tests.rs  queries_test.rs  scratchpad_test.rs  test_fake.rs  test_scratchpad.rs  testing_tests.rs
