[package]
name = "mokapot"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run="mokapot"

[dependencies]
itertools = ">= 0.9.0"
rustc-hash = ">= 2.1.1"
#fixedbitset = "0.5.7"
roaring = "0.11.2"
num-traits = "0.2.19"

[dev-dependencies]
criterion = "0.5.1"
approx = "0.5.1"
proptest = "1.7.0"
flamegraph = "0.6.8"
rand = "0.9.2"
fake = "4.4.0"

[profile.release]
# debug = true

[profile.bench]
# Uncomment and build again if you want to profile
debug = true

[[bench]]
name = "percolate_simple"
harness = false

[[bench]]
name = "percolate_real"
harness = false
