[package]
name = "mokaccino"
version = "0.2.0"
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
description = "A library to match transient Documents against a corpus of Queries."
homepage = "https://github.com/jeteve/mokapot"
repository = "https://github.com/jeteve/mokapot.git"
keywords = [ "search", "percolator" ]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run="mokaccino"

[features]
serde = ["dep:serde", "serde_json"]

[dependencies]
itertools = "^0.9"
roaring = "^0.11"
num-traits = "^0.2"
hashbrown = "^0.16"
hstats = "0.1.0"
serde = { version = "^1.0", optional = true , features = [ "rc" ]}
serde_json = { version = "^1.0", optional = true }

[dev-dependencies]
criterion = "0.7.0"
approx = "0.5.1"
flamegraph = "0.6.8"
rand = "0.9.2"
fake = "4.4.0"

[profile.release]
# debug = true

[profile.bench]
# Uncomment and build again if you want to profile
# debug = true

[[bench]]
name = "percolate_simple"
harness = false

[[bench]]
name = "percolate_real"
harness = false
