[package]
name = "mokaccino"
version = "0.6.0"
edition = "2024"
readme = "README.md"
license = "MIT"
description = "A library to match transient Documents against a corpus of Queries."
homepage = "https://github.com/jeteve/mokapot"
repository = "https://github.com/jeteve/mokapot.git"
keywords = [ "search", "percolator" ]
categories = ["algorithms"]
exclude = [
    ".devcontainer/*",
    ".vscode/*",
    "**.proptest-regressions"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run="mokaccino"

[features]
serde = ["dep:serde", "serde_json", "h3o/serde"]
send = []

[dependencies]
itertools = "^0.9"
roaring = "^0.11"
num-traits = "^0.2"
hashbrown = "^0.16"
hstats = "^0.1"
chumsky = "^0.11"
h3o = { version = "^0.9" }
serde = { version = "^1.0", optional = true , features = [ "rc" , "derive"]}
serde_json = { version = "^1.0", optional = true }
strum = { version = "^0.27", features = ["derive"] }
rand = { version = "^0.9"}

[dev-dependencies]
criterion = "0.7.0"
approx = "0.5.1"
flamegraph = "0.6.8"
fake = "4.4.0"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[profile.release]
# debug = true

[profile.bench]
# Uncomment and build again if you want to profile
# debug = true

[[bench]]
name = "percolate_real"
harness = false

[[bench]]
name = "queries"
harness = false
